[package]
name = "s3-write-only-fs"
version = "0.1.0"
edition = "2018"

authors = [
    "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>",
]
license = "Apache-2.0"

autobins = false
publish = false

[[bin]]
name = "s3-write-only-fs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
daemonize = "0.4.1"
fuse = { git = "https://github.com/zargony/fuse-rs/", rev = "39fde4a5c47ce370d228ac190f950bd835db7f47" }
libc = "0.2.80"
log = "0.4.11"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.5.0"
slog-journald = "2.1.1"
slog-scope = "4.3.0"
slog-stdlog = "4.1.0"
slog-term = "2.6.0"
tokio = { version = "0.2.22", features = ["full"] }
