[package]
name = "s3-write-only-fs"
version = "0.1.0"
description = "FUSE filesystem to mount an S3-bucket in a write-only fashion"
edition = "2018"

authors = [
    "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>",
]
license = "Apache-2.0"

autobins = false
publish = false

[[bin]]
name = "s3-write-only-fs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
daemonize = "0.5.0"
fuse = { git = "https://github.com/zargony/fuse-rs/", rev = "39fde4a5c47ce370d228ac190f950bd835db7f47" }
libc = "0.2.176"
log = "0.4.28"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.8.0"
slog-journald = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.2"
tokio = { version = "1.47.1", features = ["full"] }

[package.metadata.rpm]
package = "s3-write-only-fs"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
s3-write-only-fs = { path = "/s3-write-only-fs" }
